crates/ruff_python_formatter/tests/snapshots/format@build_stamps.by.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/ruff/build_stamps.by
---
## Input
```bython
build:
    """what this artifact was built from"""

    GIT_SHA: str
    GIT_SHA_SHORT: str
    GIT_DIRTY: bool
    BUILT_AT: str
    VERSION: str = "0.0.0+dev"
    BUILD_NUMBER: int = 0


def describe() -> str:
    return f"{build.GIT_SHA_SHORT}{'-dirty' if build.GIT_DIRTY else ''}"
```

## Output
```bython
build:
    """what this artifact was built from"""

    GIT_SHA: str
    GIT_SHA_SHORT: str
    GIT_DIRTY: bool
    BUILT_AT: str
    VERSION: str      = "0.0.0+dev"
    BUILD_NUMBER: int = 0


def describe() -> str:
    return f"{build.GIT_SHA_SHORT}{'-dirty' if build.GIT_DIRTY else ''}"
```
