crates/ruff_python_formatter/tests/snapshots/format@callable.by.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/ruff/callable.by
---
## Input
```bython
f: (int, str) -> bool
g: (a: int, b: str) -> bool
h: (int, /, name: str) -> bool
i: (int, *, name: str) -> bool
j: (*: int) -> int
k: (**: str) -> int
l: (int, /, name: str, *args: bool, **kwargs: int) -> None
m: (...) -> int
n: (...) -> (int) -> str
o: (*Ts) -> int
p: (int, *Ts) -> int
q: (*args: *Ts) -> int
r: (Unpack[Ts]) -> int
s: (int, Unpack[tuple[str, bytes]]) -> int


def takes(cb: (int) -> str) -> str:
    return cb(0)


o: int.() -> str
p: str.(int) -> bytes
q: int.(str, /, name: bytes) -> None
q2: int.(str, *, flag: bool) -> None
r: list[int.() -> str]
s: int.() -> str.() -> bytes
t: int.(...) -> str


def takes_receiver(cb: int.() -> str) -> str:
    return cb(0)


# the verbatim range carries the comments written between the parameters
type Commented = (
    int,  # end-of-line on a parameter
    # own-line between parameters
    str,
) -> bool


# a callable type's return binds tighter than a comparison, so the narrowing
# predicate it returns keeps its parentheses
def narrows(check: (first: object, second: object) -> (second is int)): ...
```

## Output
```bython
f: (int, str) -> bool
g: (a: int, b: str) -> bool
h: (int, /, name: str) -> bool
i: (int, *, name: str) -> bool
j: (*: int) -> int
k: (**: str) -> int
l: (int, /, name: str, *args: bool, **kwargs: int) -> None
m: (...) -> int
n: (...) -> (int) -> str
o: (*Ts) -> int
p: (int, *Ts) -> int
q: (*args: *Ts) -> int
r: (Unpack[Ts]) -> int
s: (int, Unpack[tuple[str, bytes]]) -> int


def takes(cb: (int) -> str) -> str:
    return cb(0)


o: int.() -> str
p: str.(int) -> bytes
q: int.(str, /, name: bytes) -> None
q2: int.(str, *, flag: bool) -> None
r: list[int.() -> str]
s: int.() -> str.() -> bytes
t: int.(...) -> str


def takes_receiver(cb: int.() -> str) -> str:
    return cb(0)


# the verbatim range carries the comments written between the parameters
type Commented = (
    int,  # end-of-line on a parameter
    # own-line between parameters
    str,
) -> bool


# a callable type's return binds tighter than a comparison, so the narrowing
# predicate it returns keeps its parentheses
def narrows(check: (first: object, second: object) -> (second is int)): ...
```
